--- a/client/package.json
+++ b/client/package.json
@@ -3,19 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@ethersproject/providers": "^5.7.2",
+    "@mui/material": "^5.13.5",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/graceful-fs": "^4.1.6",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
     "bootstrap": "^5.1.1",
+    "ethereum-blockies-base64": "^1.0.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0-beta.1",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-lazy-load": "^4.0.1",
@@ -52,6 +57,7 @@
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "dotenv-webpack": "^8.0.1",
     "ethers": "^5.7.2",
     "prettier": "2.8.8"
   }
