--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 REACT_APP_CONTRACT_ADDRESS=0x05cB27D9a67071f0Db862e913036487d232B9b81
 
-REACT_APP_API_URL=http://localhost:5000
+REACT_APP_API_URL=https://pin-api-test.onrender.com
